--- a/pages/index.html
+++ b/pages/index.html
@@ -68,7 +68,7 @@
                 <div class="card status-card in-progress">
                     <h3>Producción</h3>
                     <div class="number">8</div>
-                    <a href="pedidos.html" class="btn btn-sm btn-primary">Ver detalles</a>
+                    <a href="produccion.html" class="btn btn-sm btn-primary">Ver detalles</a>
                 </div>
                 <div class="card status-card completed">
                     <h3>Entregados</h3>
