--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -406,33 +406,13 @@
             lastScrollTop = scrollTop;
         });
 
-        // Control del menú móvil SOLO con el botón hamburguesa y la X
+        // Control del menú móvil
         const menuToggle = document.getElementById('menuToggle');
         const closeMenu = document.getElementById('closeMenu');
         const sidebar = document.querySelector('.sidebar');
-        menuToggle.addEventListener('click', () => {
-            sidebar.classList.toggle('active');
-            menuToggle.classList.toggle('menu-active');
-            if (sidebar.classList.contains('active')) {
-                closeMenu.style.display = 'block';
-                menuToggle.style.display = 'none';
-            } else {
-                closeMenu.style.display = 'none';
-                menuToggle.style.display = 'block';
-            }
-        });
-        closeMenu.addEventListener('click', function() {
-            sidebar.classList.remove('active');
-            menuToggle.classList.remove('menu-active');
-            closeMenu.style.display = 'none';
-            menuToggle.style.display = 'block';
-        });
-    </script>
 
-    <script>
         // Lógica para mostrar/ocultar el botón del menú móvil según el ancho de la ventana
         function checkMobileView() {
-            const menuToggle = document.getElementById('menuToggle');
             if (window.innerWidth <= 768) {
                 menuToggle.style.display = 'block';
             } else {
@@ -443,11 +423,6 @@
         // Ejecutar al cargar y al redimensionar
         checkMobileView();
         window.addEventListener('resize', checkMobileView);
-
-        // Lógica para abrir/cerrar la sidebar en móvil
-        const menuToggle = document.getElementById('menuToggle');
-        const closeMenu = document.getElementById('closeMenu');
-        const sidebar = document.querySelector('.sidebar');
 
         menuToggle.addEventListener('click', () => {
             sidebar.classList.toggle('active');
