--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -307,18 +307,35 @@
         const sidebar = document.getElementById('sidebar');
         const closeSidebar = document.getElementById('closeSidebar');
 
+        // Función para verificar el ancho de la pantalla y ajustar la visibilidad del botón del menú
+        function checkScreenSize() {
+          if (window.innerWidth <= 768) {
+            menuToggle.style.display = 'block';
+          } else {
+            menuToggle.style.display = 'none';
+            sidebar.classList.remove('open'); // Asegurarse de que la sidebar esté cerrada en escritorio
+            closeSidebar.style.display = 'none';
+          }
+        }
+
         function openSidebar() {
           sidebar.classList.add('open');
           closeSidebar.style.display = 'block';
           menuToggle.style.display = 'none';
         }
+
         function closeSidebarFunc() {
           sidebar.classList.remove('open');
           closeSidebar.style.display = 'none';
-          menuToggle.style.display = 'block';
+          checkScreenSize(); // Llamar a la función para ajustar la visibilidad del botón
         }
+
         menuToggle.onclick = openSidebar;
         closeSidebar.onclick = closeSidebarFunc;
+
+        // Ejecutar al cargar la página y al redimensionar la ventana
+        checkScreenSize();
+        window.addEventListener('resize', checkScreenSize);
 
         // Resalta automáticamente el enlace del menú según el archivo actual
         document.querySelectorAll('.nav-link').forEach(link => {
