--- a/pages/reportes.html
+++ b/pages/reportes.html
@@ -80,6 +80,8 @@
                         <select id="date-range" class="form-control">
                             <option value="current-day">Día Actual</option>
                             <option value="current-week">Semana Actual</option>
+                            <option value="current-month">Mes Actual</option>
+                            <option value="current-year">Año Actual</option>
                             <option value="custom">Personalizado</option>
                         </select>
                     </div>
