--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -28,7 +28,9 @@
                     <li class="nav-item">
                         <a href="clientes.html" class="nav-link active">Clientes</a>
                     </li>
-                    
+                    <li class="nav-item">
+                        <a href="contratos.html" class="nav-link">Contratos</a>
+                    </li>
                     <li class="nav-item">
                         <a href="inventario.html" class="nav-link">Inventario</a>
                     </li>
