--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -40,6 +40,9 @@
                         <a href="clientes.html" class="nav-link">Clientes</a>
                     </li>
                     <li class="nav-item">
+                        <a href="contratos.html" class="nav-link">Contratos</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="inventario.html" class="nav-link">Inventario</a>
                     </li>
                     <li class="nav-item">
