--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -23,6 +23,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Dashboard</a></li>
           <li class="nav-item"><a href="pedidos.html" class="nav-link">Pedidos</a></li>
           <li class="nav-item"><a href="clientes.html" class="nav-link">Clientes</a></li>
+          <li class="nav-item"><a href="contratos.html" class="nav-link">Contratos</a></li>
           <li class="nav-item"><a href="inventario.html" class="nav-link">Inventario</a></li>
           <li class="nav-item"><a href="produccion.html" class="nav-link">Producción</a></li>
           <li class="nav-item"><a href="agenda.html" class="nav-link active">Agenda</a></li>
@@ -115,9 +116,9 @@
               <tr>
                 <th>ID</th>
                 <th>Cliente</th>
-                <th>Fecha</th>
-                <th>Hora de Inicio</th>
                 <th>Dirección</th>
+                <th>Fecha</th>
+                <th>Hora</th>
                 <th>Estado</th>
                 <th>Avance</th>
                 <th>Acciones</th>
