--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -43,6 +43,9 @@
                         <a href="clientes.html" class="nav-link">Clientes</a>
                     </li>
                     <li class="nav-item">
+                        <a href="contratos.html" class="nav-link">Contratos</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="inventario.html" class="nav-link active">Inventario</a>
                     </li>
                     <li class="nav-item">
